experiment with rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${Game_SOURCE_DIR}/cmake")
 
 find_package(SDL3 REQUIRED)
+find_package(SDL3_image REQUIRED)
 find_package(ENet REQUIRED)
 
 include_directories("src/" "src/imgui/" "src/imgui/backends")
@@ -20,6 +21,7 @@ set(MAIN_SOURCES
     ${IMGUI_SOURCES}
     "src/aabb.cpp"
     "src/ColorRenderer.cpp"
+    "src/Draw.cpp"
     "src/dynamic_object.cpp"
     "src/game_object.cpp"
     "src/platform.cpp"
@@ -29,10 +31,11 @@ set(MAIN_SOURCES
     "src/vec2.cpp"
     "src/main.cpp"
     "src/Client.cpp"
+    "src/TextureManager.cpp"
     )
 
 add_executable(main ${MAIN_SOURCES})
-target_link_libraries(main PRIVATE SDL3::SDL3 ${ENET_LIBRARIES})
+target_link_libraries(main PRIVATE SDL3::SDL3 SDL3_image::SDL3_image ${ENET_LIBRARIES})
 
 set(SERVER_SOURCES
     "src/server.cpp"
