cmake bundle on mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,20 +11,25 @@ find_package(EnTT REQUIRED)
 find_package(glm REQUIRED)
 find_package(Protobuf CONFIG REQUIRED)
 
-set(PROTO_FILES
-    "src/proto/game.proto"
-)
+add_executable(main)
 
-include_directories("src/" "src/Components/" "src/Networking/" "src/Systems/" "src/imgui/" "src/imgui/backends/")
-include_directories(${ENET_INCLUDE_DIRS} ${Protobuf_INCLUDE_DIRS})
+target_include_directories(main PRIVATE
+    "src" 
+    "src/Components" 
+    "src/Networking" 
+    "src/proto"
+    "src/Systems" 
+    "src/imgui" 
+    "src/imgui/backends"
+    ${ENET_INCLUDE_DIRS}
+    ${Protobuf_INCLUDE_DIRS})
 
 file(GLOB IMGUI_SOURCES
     "src/imgui/*.cpp"
     "src/imgui/backends/imgui_impl_sdl3.cpp"
-    "src/imgui/backends/imgui_impl_sdlrenderer3.cpp"
-    )
+    "src/imgui/backends/imgui_impl_sdlrenderer3.cpp")
 
-set(MAIN_SOURCES
+target_sources(main PRIVATE
     ${IMGUI_SOURCES}
     "src/Renderer.cpp"
     "src/Networking/ENetClient.cpp"
@@ -44,18 +49,15 @@ set(MAIN_SOURCES
     "src/Entity.cpp"
     "src/Direction.cpp"
     "src/Scene.cpp"
-    "src/main.cpp"
-    )
+    "src/main.cpp")
 
-add_executable(main ${MAIN_SOURCES})
+set(PROTO_DIR "src/proto")
+set(PROTO_FILES "${PROTO_DIR}/game.proto")
 
-file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/generated)
-
-protobuf_generate(TARGET main
-PROTOS ${PROTO_FILES}
-PROTOC_OUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated"
-IMPORT_DIRS "src/proto"
-)
+protobuf_generate(TARGET main 
+    PROTOS ${PROTO_FILES}
+    PROTOC_OUT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${PROTO_DIR}
+    IMPORT_DIRS ${PROTO_DIR})
 
 option(HEADLESS "Headless server" OFF)
 
@@ -63,44 +65,35 @@ if(HEADLESS)
     add_compile_definitions(HEADLESS)
 endif()
 
-target_include_directories(main PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/generated" "${CMAKE_CURRENT_BINARY_DIR}/generated/src/proto")
-target_link_libraries(main PRIVATE SDL3::SDL3 SDL3_image::SDL3_image EnTT::EnTT glm::glm protobuf::libprotobuf ${ENET_LIBRARIES})
+target_link_libraries(main PRIVATE 
+    SDL3::SDL3
+    SDL3_image::SDL3_image
+    EnTT::EnTT
+    glm::glm
+    protobuf::libprotobuf
+    ${ENET_LIBRARIES})
+
+set(RESOURCE_FILES 
+    "assets/ceiling.png"
+    "assets/conveyor_left.png"
+    "assets/conveyor_right.png"
+    "assets/fake.png"
+    "assets/normal.png"
+    "assets/player.png"
+    "assets/spikes.png"
+    "assets/trampoline.png"
+    "assets/wall.png")
+
+target_sources(main PRIVATE ${RESOURCE_FILES})
 
 if(APPLE)
-
-    # Set the RPATH to the Frameworks directory inside the app bundle
     set_target_properties(main PROPERTIES
-        INSTALL_RPATH "@executable_path/../Frameworks"
-    )
+        MACOSX_BUNDLE TRUE)
+    
+    set_source_files_properties(${RESOURCE_FILES} PROPERTIES
+        MACOSX_PACKAGE_LOCATION "Resources/assets")
 
-    set(RESOURCE_PATH "${CMAKE_BINARY_DIR}/Game.app/Contents/Resources/")
-
-    target_compile_definitions(main PRIVATE RESOURCE_PATH="${RESOURCE_PATH}")
-
-    # Install the executable and the libraries into the app bundle structure
-    install(TARGETS main
-        DESTINATION "${CMAKE_BINARY_DIR}/Game.app/Contents/MacOS"
-    )
-
-    install(FILES   $<TARGET_FILE:SDL3::SDL3> $<TARGET_FILE:SDL3_image::SDL3_image> 
-                    $<TARGET_FILE:glm::glm> $<TARGET_FILE:protobuf::libprotobuf> ${ENET_LIBRARIES} 
-
-        DESTINATION "${CMAKE_BINARY_DIR}/Game.app/Contents/Frameworks"
-    )
-
-    # Specify the location of resources
-    set(RESOURCE_DIR "${CMAKE_SOURCE_DIR}/assets")
-
-    # Install resources into the Resources directory of the app bundle
-    install(DIRECTORY ${RESOURCE_DIR}/
-        DESTINATION "${CMAKE_BINARY_DIR}/Game.app/Contents/Resources"
-        FILES_MATCHING PATTERN "*.png"  # or "*.jpg", "*.wav" depending on the resources you want
-    )
-
-    install(FILES ${CMAKE_SOURCE_DIR}/Info.plist
-    DESTINATION ${CMAKE_BINARY_DIR}/Game.app/Contents
-)
-elseif(UNIX)
-    # For Linux or other Unix-based systems, resources might be in a 'resources' folder
-    set(RESOURCE_PATH ${RESOURCE_DIR}/)
+    set(CMAKE_INSTALL_RPATH "@loader_path")
+    set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR})
+    install(SCRIPT cmake/bundle.cmake)
 endif()
